# MyMusicPlayer

./: README.md
AudioPlayer/: CMakeLists.txt  main.cpp
AudioPlayer/TinyWidgetLibrary/: CMakeLists.txt  main.cpp
AudioPlayer/TinyWidgetLibrary/img/: Dark_Theme__2019__v1.0.4.vsix  Oceanic_Theme.vsix
AudioPlayer/TinyWidgetLibrary/src/PopupBox/: MessageBoxHint.cpp
AudioPlayer/include/: HttpMgr.h  LocalUsr.h  MediaBuffer.h  MediaPlayer.h  Singleton.hpp  const.h
AudioPlayer/include/Window/: FileSongItem.h  LoginWindow.h  MainWindow.h  RedirectWindow.h  RegisterWindow.h  SongItem.h
AudioPlayer/src/: ClientControl.cpp  HttpMgr.cpp  LocalUsr.cpp  MediaBuffer.cpp  const.cpp
AudioPlayer/src/Window/: FileSongItem.cpp  LoginWindow.cpp  MainWindow.cpp  RedirectWindow.cpp  RegisterWindow.cpp  SongItem.cpp
AudioPlayer/style/: style.qss
AudioPlayer/ui/: AudioPlayer.ui  FileSongItem.ui  LoginWindow.ui  RegisterWindow.ui  SongItem.ui
VarifyServer/: config.json  package-lock.json  package.json  server.js
WebServer/: CMakeLists.txt  config.ini  main.cpp
WebServer/HttpConnection/: HttpConnection.cpp  HttpConnection.h
WebServer/LogicSystem/: LogicSystem.cpp  LogicSystem.h
WebServer/Mysql/: MYSQLConPool.cpp  MYSQLConPool.h  MYSQLMgr.cpp  MYSQLMgr.h
WebServer/Redis/: RedisMgr.cpp  RedisMgr.h  RedisMgrPool.h
WebServer/SQL/: my_tables.sql
WebServer/Server/GateServer/: WebServer.cpp  WebServer.h
WebServer/Server/VarifyServer/: VarifyServer.cpp  VarifyServer.h
WebServer/Server/WebServer/: WebServer.cpp  WebServer.h
WebServer/Service/: AsioIOServicePool.cpp  AsioIOServicePool.h
WebServer/Tool/: BlockQueue.h  ConfigMgr.cpp  ConfigMgr.h  Epoller.h  Loger.h  ThreadPool.h  const.h
